--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/server & test/client"
+    "server-test": "mocha test/server",
+    "client-test": "http-server -p 8081",
+    "file-server": "http-server ./client -p 8080",
+    "api-server": "node server/main.js",
+    "test": "npm-run-all -p  server-test api-server client-test",
+    "start": "npm-run-all -p -r file-server api-server"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +19,8 @@
     "mocha": "^3.5.3"
   },
   "dependencies": {
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "npm-run-all": "^4.1.1"
   },
   "description": ""
 }
